@@ -5,6 +5,8 @@ import java.awt.Color;
 import java.awt.image.BufferedImage;
 
 import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.util.Option;
+import edu.colorado.phet.common.phetcommon.util.Option.Some;
 import edu.colorado.phet.common.piccolophet.nodes.ControlPanelNode;
 import edu.colorado.phet.common.piccolophet.nodes.layout.HBox;
 import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
@@ -46,7 +48,7 @@ public class ViewControlPanel extends ControlPanelNode {
                            new PropertyTogglingImageNode( barGraphCheckBoxIcon, EnergySkateParkResources.getImage( "icons/bar_icon.png" ), module.barChartVisible ),
                            new PropertyTogglingImageNode( pieChartCheckBoxIcon, PIE_ICON, module.pieChartVisible ),
                            new PropertyTogglingImageNode( gridCheckBoxIcon, EnergySkateParkResources.getImage( "icons/grid_icon.png" ), module.gridVisible ),
-                           new PropertyTogglingImageNode( speedCheckBoxIcon, new ESPSpeedometerNode( new Property<Double>( 0.0 ) ).toImage( PIE_ICON.getWidth(), PIE_ICON.getWidth(), new Color( 0, 0, 0, 0 ) ), module.speedVisible )
+                           new PropertyTogglingImageNode( speedCheckBoxIcon, new ESPSpeedometerNode( new Property<Option<Double>>( new Some<Double>( 0.0 ) ) ).toImage( PIE_ICON.getWidth(), PIE_ICON.getWidth(), new Color( 0, 0, 0, 0 ) ), module.speedVisible )
                    )
             );
         }
