@@ -1,3 +1,4 @@
+4/5/12 hide the speedometer needle when NaN
 3/29/12 add ToggleButtonNode and MomentaryButtonNode
 3/20/12 made rootNode protected, see #3255
 3/20/12 Extend ticks to the track, see #3255
